Fix: wrong padding
 Changes to be committed:
	modified:   frontend/public/index.css

--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -404,7 +404,7 @@ textarea {
 	text-align: center;
 	padding: 5px;
 	margin: 0;
-	padding-left: 150px;
+	/* padding-left: 150px; */
 }
 
 /*_______________________________________________________________________________________*/
